# dirbspy

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  dirbspy-testreport.xml  pyproject.toml  pytest.ini  setup.py
examples/: example1.py
src/dirbspy/: __init__.py  client.py  exceptions.py
src/dirbspy/apis/: __init__.py  catalog.py  imei.py  msisdn.py  tac.py  version.py
src/dirbspy/clients/: __init__.py  core.py
tests/: fixtures.py  tac.py
