[tool.poetry]
name = "dirbspy"
version = "0.1.0"
description = "A friendly Python API interface for Device Identification Registration & Blocking System (DIRBS)"
authors = ["a-wakeel <awkhan978@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
